--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@ngrx/store": "^8.5.2",
     "angularfire2": "^5.2.3",
     "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
